added jquery and got css working

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #fafafa;
 }
 
 .wrapper {
@@ -31,11 +31,11 @@ header {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 82%, 11%);
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsla(210, 37%, 97%, 0.925);
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -88,7 +88,7 @@ header {
   cursor: pointer;
 }
 
-button[:active] {
+button[disabled] {
   cursor: default;
   background: #c0c7cf;
 }
